--- a/Description
+++ b/Description
@@ -2,3 +2,5 @@ Hello my name is Mohammed Sajjadul
 Currently learning Software Development with NorthCoders
 Passionate about Computer Science
 I am a Liverpool FC fan
+Favourite colour is Red
+Favourite game is Call Of Duty
