Added my favourite car brand and type

--- a/Description
+++ b/Description
@@ -1,6 +1,8 @@
 Hello my name is Mohammed Sajjadul
+My favourite car is M140i 
 Currently learning Software Development with NorthCoders
 Passionate about Computer Science
 I am a Liverpool FC fan
 Favourite colour is Red
 Favourite game is Call Of Duty
+Car brand - BMW
