Added details to my car

--- a/Description
+++ b/Description
@@ -6,3 +6,4 @@ I am a Liverpool FC fan
 Favourite colour is Red
 Favourite game is Call Of Duty
 Car brand - BMW
+M140i - Has 335HP - on a rear wheel drive setup - Best colour on this card would be a Nardo Grey
